Next (not yet released)

* Rhino and Node CLIs both exit with code 1 when there are errors (pull #72)
* Changed description of adjoining classes to be unsupported in IE6 (fixes #11)
* Made license comment important in build files (fixes #46)
* Code cleanup (pull #70)
* Cleanup of whitespace (pull #74)
* Standardization of CLI interface (pull #81)
* Switched display-property-grouping to allow padding, margin-left, and margin-right for display: inline (fixes #3)
* Changed messaging for float rule (fixes #26)
* border:none with width/height is okay (fixes #45)

June 18, 2011 - v0.2.0

* Make sure headings are counted correctly (fixes #25)
* Make sure float: none doesn't count as a float for rules that care (fixes #10)
* Fix erroneous missing standard border warning (fixes #7)
* Ensure width: 100% is okay when box-sizing is specified (fixes #5)
* Fixed up width/height properties for box model rule (fixes #8)
* Incorporated Rhino CLI and updated contributors list
* Include build file in Git repo so people can grab directly (fixes #59)
* Added rule for tracking using of !important from shinuza (fixes #50)

June 15, 2011 - v0.1.0

* Initial release