@@ -21,7 +21,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 
 */
-/* Build time: 22-June-2011 04:35:14 */
+/* Build time: 22-June-2011 05:24:39 */
 var CSSLint = (function(){
 /*!
 Parser-Lib
@@ -9313,6 +9313,8 @@ var CSSLint = (function(){
 
     var rules   = [],
         api     = new parserlib.util.EventTarget();
+        
+    api.version = "@VERSION@";
 
     //-------------------------------------------------------------------------
     // Rule Management
@@ -10463,10 +10465,24 @@ var pluckByType = function(messages, type){
     });
 };
 
+function gatherRules(options){
+    var ruleset;
+    
+    if (options.rules){
+        ruleset = {};
+        options.rules.split(",").forEach(function(value){
+            ruleset[value] = 1;
+        });
+    }
+    
+    return ruleset;
+    
+}
+
 //process a list of files, return 1 if one or more error occurred
-var processFile = function(filename) {
+var processFile = function(filename, options) {
     var input = readFile(filename),
-        result = CSSLint.verify(input),
+        result = CSSLint.verify(input, gatherRules(options)),
         messages = result.messages || [],
         exitCode = 0;
 
@@ -10517,21 +10533,30 @@ var reportMessages = function(messages, warnings, errors, filename) {
         }
     });
 };
+
+
+//output CLI help screen
+function outputHelp(){
+    print([
+        "\nUsage: csslint-rhino.js [options]* [file|dir]*",
+        " ",
+        "Global Options",
+        "  --help                 Displays this information.",
+        "  --rules=<rule[,rule]+> Indicate which rules to include.",
+        "  --version              Outputs the current version number."
+    ].join("\n") + "\n\n");
+}
 /*
  * CSSLint Rhino Command Line Interface
  */
 
 importPackage(java.io);
 
-var argsArray = Array.prototype.slice.call(arguments),
-    files    = [];
+//-----------------------------------------------------------------------------
+// Helper Functions
+//-----------------------------------------------------------------------------
 
-if (argsArray.length === 0) {
-    print("Usage: csslint-rhino.js [file|dir]*");
-    quit(1);
-}
-
-var getFiles  = function (dir) {
+function getFiles(dir) {
     var files = [];
 
     var traverse = function (dir) {
@@ -10550,21 +10575,56 @@ var getFiles  = function (dir) {
     return files;
 };
 
-argsArray.forEach(function (arg) {
-    var curFile = new File(arg);
+//-----------------------------------------------------------------------------
+// Process command line
+//-----------------------------------------------------------------------------
 
-    if (!curFile.exists()) {
-        print("File or directory '" + arg + "' not found.");
-        return;
-    }
+var args     = Array.prototype.slice.call(arguments),
+    argName,
+    arg      = args.shift(),
+    options  = {},
+    files    = [];
 
-    if (curFile.isDirectory()) {
-        files = files.concat(getFiles(curFile));
+while(arg){
+    if (arg.indexOf("--") == 0){
+        argName = arg.substring(2);
+        options[argName] = true;
+        
+        if (argName.indexOf("rules=") > -1){
+            options.rules = argName.substring(argName.indexOf("=") + 1);
+        }
     } else {
-        files.push(arg);
+        
+        var curFile = new File(arg);
+        
+        //see if it's a directory or a file
+        if (curFile.isDirectory()){
+            files = files.concat(getFiles(arg));
+        } else {
+            files.push(arg);
+        }
     }
-});
+    arg = args.shift();
+}
 
-var exitCode = files.some(processFile);
+if (options.help || arguments.length == 0){
+    outputHelp();
+    quit(0);
+}
+
+if (options.version){
+    print("v" + CSSLint.version);
+    quit(0);
+}
+
+var exitCode = 0;
+if (!files.length) {
+    print("No files specified.");
+    exitCode = 1;
+} else {
+    exitCode = files.some(function(file){
+        processFile(file,options);
+    });
+}
 quit(Number(exitCode));
 
