@@ -1,6 +1,6 @@
 {
     "name": "csslint",
-    "version": "0.2.0",
+    "version": "@VERSION@",
     "description": "CSSLint",
     "author": "Nicholas C. Zakas",
     "os": ["darwin", "linux"],
