@@ -44,29 +44,25 @@ function getFiles(dir){
     return files;
 }
 
-//output CLI help screen
-function outputHelp(){
-    stdout.write([
-        "\nUsage: csslint [file|dir]*",
-        " ",
-        "Global Options",
-        "  --help              Displays this information."
-    ].join("\n") + "\n\n");
-}
-
 //-----------------------------------------------------------------------------
 // Process command line
 //-----------------------------------------------------------------------------
 
 var args     = process.argv.slice(2),
+    argName,
     arg      = args.shift(),
     files    = [];
 
 while(arg){
     if (arg.indexOf("--") == 0){
-        options[arg.substring(2)] = true;
-    } else {
+        argName = arg.substring(2);
+        options[argName] = true;
         
+        if (argName.indexOf("rules=") > -1){
+            options.rules = argName.substring(argName.indexOf("=") + 1);
+        }
+    } else {
+                
         //see if it's a directory or a file
         if (fs.statSync(arg).isDirectory()){
             files = files.concat(getFiles(arg));
@@ -77,8 +73,13 @@ while(arg){
     arg = args.shift();
 }
 
-if (options.help || process.argv.length == 2){
+if (options.help || arguments.length == 0){
     outputHelp();
+    process.exit(0);
+}
+
+if (options.version){
+    print("v" + CSSLint.version);
     process.exit(0);
 }
 
@@ -87,6 +88,14 @@ files = files.map(function(filename){
     return path.join(process.cwd(), filename);
 });
 
-//process files, get the exit code
-var exitCode = files.some(processFile)
+var exitCode = 0;
+if (!files.length) {
+    print("No files specified.");
+    exitCode = 1;
+} else {
+    exitCode = files.some(function(file){
+        processFile(file,options);
+    });
+}
 process.exit(Number(exitCode));
+
